--- a/teamplanner-spa/package.json
+++ b/teamplanner-spa/package.json
@@ -17,7 +17,8 @@
   "author": "teamplanner-spa",
   "license": "MIT",
   "dependencies": {
+    "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
-    "lit-element": "^2.0.1"
+    "moment": "^2.27.0"
   }
 }
