--- a/teamplanner-spa/package.json
+++ b/teamplanner-spa/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "pulltorefreshjs": "^0.1.20"
   }
 }
